# Simple

./: README.md  bspatch.jks
app/: app-debug-1.0.apk  app-debug-1.1.apk  bspatch-test.patch  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/maiml/simple/: ApkUtils.java  BspatchNDK.java  DownloadUtil.java  MainActivity.java  UpdateApkActivity.java
app/src/main/res/layout/: activity_main.xml  activity_update_apk.xml
bspatchlibrary/: build.gradle
bspatchlibrary/src/androidTest/java/com/maiml/bspatchlibrary/: ExampleInstrumentedTest.java
bspatchlibrary/src/main/: AndroidManifest.xml
bspatchlibrary/src/main/cpp/: CMakeLists.txt  bspatch.c  patch-box.c
bspatchlibrary/src/main/java/com/maiml/bspatchlibrary/: BspatchNDK.java
bspatchlibrary/src/main/res/values/: strings.xml
bspatchlibrary/src/test/java/com/maiml/bspatchlibrary/: ExampleUnitTest.java
